Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-30870

undo tablespace name displays wrongly for I_S queries

    XMLWordPrintable

Details

    Description

      InnoDB I_S queries displays innodb_system for undo tablespaces.

      select * from information_schema.innodb_sys_tablespaces;
      SPACE	NAME	FLAG	ROW_FORMAT	PAGE_SIZE	FILENAME	FS_BLOCK_SIZE	FILE_SIZE	ALLOCATED_SIZE
      0	innodb_system	21	NULL	16384	./ibdata1	4096	12582912	12582912
      1	innodb_system	21	NULL	16384	.//undo001	4096	10485760	10485760
      2	innodb_system	21	NULL	16384	.//undo002	4096	10485760	10485760
      3	innodb_system	21	NULL	16384	.//undo003	4096	10485760	10485760
      

      innodb_undo001, innodb_undo002 etc should be displayed for undo tablespaces

      Attachments

        Activity

          People

            thiru Thirunarayanan Balathandayuthapani
            thiru Thirunarayanan Balathandayuthapani
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 3.5h
                3.5h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.